<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.view.View" />
        <!--<variable
            name="form"
            type="edu.aku.hassannaqvi.tas.models.Form" />-->

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- h101  Input   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVh101"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                            <LinearLayout
                                android:layout_marginBottom="4dp"

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="166dp"
                                    android:layout_height="match_parent"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="12dp"
                                    android:text="@string/a107" />

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/a107"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:hint="@string/a107" />

                            </LinearLayout>



                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="4dp"
                                android:orientation="horizontal">


                                <TextView
                                    android:layout_width="166dp"
                                    android:layout_height="match_parent"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="12dp"
                                    android:text="@string/a108" />

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/a108"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:hint="@string/a108" />

                            </LinearLayout>



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="4dp"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">


                                <TextView
                                    android:layout_width="166dp"
                                    android:layout_height="match_parent"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="12dp"
                                    android:text="@string/a109" />

                                <com.edittextpicker.aliazaz.EditTextPicker
                                    android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
                                    android:id="@+id/a109"
                                    style="@style/textInput"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:hint="@string/a109" />

                                <Button
                                    android:visibility="gone"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:drawableStart="@drawable/search"
                                    android:onClick="checkHousehold"
                                    android:text="Search"
                                    android:textColor="@color/colorPrimary" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="4dp"

                                android:background="@drawable/bottom"
                                android:orientation="horizontal">


                                <TextView
                                    android:layout_width="166dp"
                                    android:layout_height="match_parent"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="12dp"
                                    android:text="@string/a105" />

                                <com.edittextpicker.aliazaz.EditTextPicker
                                    android:id="@+id/a105"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:hint="@string/a105"
                                    android:inputType="number"
                                    android:maxLength="11"
                                    app:maxValue="100"
                                    app:minValue="0"
                                     />

                                <CheckBox
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="N/A"
                                    android:textColor="@color/colorPrimary" />

                                <Button
                                    android:visibility="gone"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:drawableStart="@drawable/search"
                                    android:onClick="searchEB"
                                    android:text="Search"
                                    android:textColor="@color/colorPrimary" />


                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="4dp"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">


                                <TextView
                                    android:layout_width="166dp"
                                    android:layout_height="match_parent"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="12dp"
                                    android:text="@string/a114a" />

                                <com.edittextpicker.aliazaz.EditTextPicker
                                    android:id="@+id/a114a"
                                    style="@style/textInput"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:hint="####"
                                    android:inputType="number"
                                    android:maxLength="4" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="4dp"
                                android:background="@drawable/bottom"
                                android:visibility="gone"
                                android:orientation="horizontal">


                                <TextView
                                    style="@style/sub_labels"
                                    android:layout_width="166dp"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="12dp"
                                    android:text="Head of Household" />

                                <TextView
                                    android:id="@+id/ahhead"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:background="@color/white"
                                    android:textColor="@color/black" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="240dp"
                    android:orientation="horizontal"
                    android:padding="24dp">


                    <!--
                             <enum name="src_over" value="3" />
                                <enum name="src_in" value="5" />
                                <enum name="src_atop" value="9" />
                                <enum name="multiply" value="14" />
                                <enum name="screen" value="15" />
                                <enum name="add" value="16" />
                    -->
                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/capsule"
                        android:backgroundTint="@color/gray"
                        android:backgroundTintMode="src_atop"
                        android:enabled="false"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="OnClick" />

                </LinearLayout>
                <!--EndButton LinearLayout-->


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>